# ros2-scaffold

./: .clang-format  .gitignore  .ruff.toml  README.md  pixi.toml
.devcontainer/: Dockerfile  devcontainer.json  postCreate.sh
.github/: renovate.json
src/cpp_srvsev/: CMakeLists.txt  package.xml
src/cpp_srvsev/src/: get_battery_server.cpp
src/custom_interfaces/: CMakeLists.txt  package.xml
src/custom_interfaces/srv/: GetBattery.srv
